# marmot

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci_tox.yaml
examples/: 01_basic.py
examples/arithmetic/: __init__.py  main.py
examples/fcp/: __init__.py  main.py  model1.pt  model2.pt  requirements.txt  test.py
src/marmot/: __init__.py  __init__.pyi  core.py  core.pyi
src/marmot/base_models/: arithmetic.py  arithmetic.pyi  fuel_consumption.py  fuel_consumption.pyi
src/marmot/model/: __init__.py  core.py  core.pyi  load.py  registration.py  registration.pyi  validation.py
src/marmot_utils/: cli.py  cli.pyi  functions.py  functions.pyi  validation.py  validation_script.py
