[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "marmot"
description = "MARitime MOdel Testing"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.0.0"
dependencies = [
    "click>=8.1",
]

[project.scripts]
marmot-utils = "marmot_utils.cli:main"
