[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marmot"
description = "MARitime MOdel Testing"
readme = "README.md"
authors = ["Kelvin Lee"]
version = "0.0.0"
packages = [
    { 'include' = 'marmot', from = 'src' },
    { 'include' = 'marmot_utils', from = 'src' },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
requests = "^2.31.0"

[tool.poetry.scripts]
marmot-utils = "marmot_utils.cli:main"
